modificar estrucutura del dom

--- a/src/app/components/device-events-actions/device-events-actions.component.html
+++ b/src/app/components/device-events-actions/device-events-actions.component.html
@@ -1,6 +1,6 @@
 <app-page-container 
-  subtitle="Set different actions for specific events that might occure to this device"
-  maintitle="Events and actions">
+  subtitle="Establezca diferentes acciones para eventos específicos que puedan ocurrir en este dispositivo"
+  maintitle="Eventos y acciones">
 
   
   <ng-container *ngFor="let term of terms; let i = index;">
