--- a/src/app/components/devices/devices.component.html
+++ b/src/app/components/devices/devices.component.html
@@ -2,8 +2,8 @@
   No hay dispositivos Por favor crea dispositivos y podrás gestionarlos aquí
 </app-error-message>
 
-<app-page-container maintitle="Devices" subtitle="All of your Devices in your environment">
-  <a class="btn btn-primary add-button" routerLink="../device/create" action-button translate>Connect a new device</a>
+<app-page-container maintitle="Dispositivos" subtitle="Todos sus dispositivos en su entorno">
+  <a class="btn btn-primary add-button" routerLink="../device/create" action-button translate>Conecte un nuevo dispositivo</a>
   <div ngx-sidebar-off class="table-responsive iot-table">
     <table class="table app-devices-table">
       <thead>
