--- a/src/app/components/gallery/gallery.component.html
+++ b/src/app/components/gallery/gallery.component.html
@@ -1,3 +1,3 @@
-<app-page-container maintitle="Gallery & Media" subtitle="Manage your medias and images">
+<app-page-container maintitle="Galería y medios" subtitle="Administre sus medios e imágenes">
   <app-ng-media #gallery></app-ng-media>
 </app-page-container>
