--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -3,7 +3,7 @@
   {{response.error.message}}
 </app-error-message>
 
-<app-page-container maintitle="My profile" subtitle="Manage and edit your personal and other information">
+<app-page-container maintitle="Mi perfil" subtitle="Administre y edite su información personal y de otro tipo">
   <form>
   <div class="row">
     <div class="col-md-6 unit">
@@ -12,7 +12,7 @@
         <input class="form-control app-profile-firstname" 
           [(ngModel)]="form.firstname"
           name="firstname"
-          type="text" placeholder="Your first name">
+          type="text" placeholder="Su nombre">
       </div>
     </div>
     <div class="col-md-6 unit">
@@ -21,7 +21,7 @@
         <input class="form-control app-profile-lastname" 
           [(ngModel)]="form.lastname"
           name="lastname"
-          type="text" placeholder="Your first lastname">
+          type="text" placeholder="Tu primer apellido">
       </div>
     </div>
     <div class="col-md-6 unit">
@@ -30,7 +30,7 @@
         <input class="form-control app-profile-phone" 
           [(ngModel)]="form.phone"
           name="phone"
-          type="text" placeholder="Your first phone">
+          type="text" placeholder="Tu primer teléfono">
       </div>
     </div>
   </div>
@@ -40,7 +40,7 @@
   </form>
 </app-page-container>
 
-<app-page-container maintitle="Regional options" subtitle="Set your language, location and timezone">
+<app-page-container maintitle="Opciones regionales" subtitle="Establezca su idioma, ubicación y zona horaria">
   <form>
   <div class="row">
     <div class="col-md-6 unit">
