--- a/src/app/components/settings/settings.component.html
+++ b/src/app/components/settings/settings.component.html
@@ -1,7 +1,7 @@
 
 <app-page-container 
   maintitle="IOT Access Token"
-  subtitle="Your devices can communicate over RESTful or MQTT using tokens.">
+  subtitle="Sus dispositivos pueden comunicarse a través de RESTful o MQTT usando tokens.">
   <pre>{{GetDeviceToken()}}</pre>
   <span style="color: red;" translate>Considera este símbolo altamente secreto. Cualquiera que tenga este token puede realizar cambios en su tablero o controlar sus dispositivos a través de la red.</span>
 </app-page-container>
