--- a/src/app/components/device-co2/device-co2.component.html
+++ b/src/app/components/device-co2/device-co2.component.html
@@ -1,4 +1,4 @@
-<app-page-container maintitle="CO2 Sensor Customization" subtitle="Modify how a CO2 can look and feel among dashboard">
+<app-page-container maintitle="CO2 Sensor personalizado" subtitle="Modifique cómo se ve y se siente un CO2 en el tablero">
   <div class="row">
     <div class="col-md-12">
       <label class="checkbox" >
