--- a/src/app/components/device-general-information/device-general-information.component.html
+++ b/src/app/components/device-general-information/device-general-information.component.html
@@ -1,11 +1,11 @@
-<app-page-container maintitle="Device general information" subtitle="Here you can modify display name or other general information">
+<app-page-container maintitle="Información general del dispositivo" subtitle="Aquí puede modificar el nombre para mostrar u otra información general">
     <br>
     <div class="row">
         <div class="col-md-6 unit">
             <label class="label" translate>Nombre</label>
             <div class="input">
                 <input class="form-control app-device-general-name" [(ngModel)]="form.name" (ngModelChange)="SubmitChange()" type="text"
-                    placeholder="{{ 'Device display name' | translate }}" id="name">
+                    placeholder="{{ 'Nombre de visualización del dispositivo' | translate }}" id="name">
                 <span class="error-message-inline" *ngIf="error(response, 'name')">{{error(response, 'name')}}</span>
             </div>
         </div>
@@ -13,7 +13,7 @@
             <label class="label" translate>Id de fuente de datos</label>
             <div class="input">
                 <input class="form-control app-device-general-datasource" [(ngModel)]="form.datasource" (ngModelChange)="SubmitChange()"
-                    type="text" placeholder="{{ 'Datasource id when your hardware requests the api' | translate }}" id="datasource">
+                    type="text" placeholder="{{ 'Id. De origen de datos cuando su hardware solicita la API' | translate }}" id="datasource">
                 <span class="error-message-inline" *ngIf="error(response, 'datasource')">{{error(response, 'datasource')}}</span>
             </div>
         </div>
@@ -43,7 +43,7 @@
             <label class="label" translate>Modelo</label>
             <div class="input">
                 <input class="form-control app-device-general-model" type="text" [(ngModel)]="form.model" (ngModelChange)="SubmitChange()"
-                    placeholder="{{ 'Model, brand or serial number' | translate }}" id="model">
+                    placeholder="{{ 'Modelo, marca o número de serie' | translate }}" id="model">
             </div>
         </div>
     </div>
@@ -51,7 +51,7 @@
         <label class="label" translate>Descripción</label>
         <div class="input">
             <textarea class="form-control app-device-general-description" [(ngModel)]="form.description" (ngModelChange)="SubmitChange()"
-                placeholder="{{ 'Write few lines of description.' | translate}}" spellcheck="false" id="description"></textarea>
+                placeholder="{{ 'Escribe algunas líneas de descripción.' | translate}}" spellcheck="false" id="description"></textarea>
         </div>
     </div>
 </app-page-container>
