--- a/src/app/components/device-humidity/device-humidity.component.html
+++ b/src/app/components/device-humidity/device-humidity.component.html
@@ -1,4 +1,4 @@
-<app-page-container maintitle="Humidity Customization" subtitle="Modify how a humidity sensor can look and feel among dashboard">
+<app-page-container maintitle="Personalización de humedad" subtitle="Modifique cómo se ve y se siente un sensor de humedad en el tablero">
   <div class="row">
     <div class="col-md-12">
       <label class="checkbox" >
