--- a/src/app/components/device-lamp/device-lamp.component.html
+++ b/src/app/components/device-lamp/device-lamp.component.html
@@ -1,4 +1,4 @@
-<app-page-container maintitle="Lamp Customization" subtitle="Modify how a lamp can look and feel among dashboard">
+<app-page-container maintitle="Personalización de la lámpara" subtitle="Modifique cómo se ve y se siente una lámpara en el tablero">
   <div class="row">
     <div class="col-md-12">
       <label class="checkbox" >
