--- a/src/app/components/docs/sending-information-https/sending-information-https.component.html
+++ b/src/app/components/docs/sending-information-https/sending-information-https.component.html
@@ -1,32 +1,33 @@
 <app-page-container maintitle="Sending a sensor data">
 
   <app-if-not-english>
-    <div class="alert alert-warning">Documents are only available in English at this moment</div>
+    <div class="alert alert-warning">Los documentos solo están disponibles en inglés en este momento</div>
   </app-if-not-english>
 
-  We will collect sensor data using same api for analog and digital devices. Each request, must specifiy the device id, even if it's
-  specified in your token specially for this device. In order to do this, you want to send us your device current value and some other 
-  data:
+  Recopilaremos datos de sensores usando la misma API para dispositivos analógicos y digitales. Cada solicitud debe especificar la identificación del dispositivo, incluso si es
+  especificado en tu token especialmente para este dispositivo. Para hacer esto, quiere enviarnos el valor actual de su dispositivo y algún otro
+  datos:
   <br>
   <ul>
-    <li><strong>geo</strong> The geographical location of your device. We accept a lat/lng value for each request because
-    in some scenarios, your device might be moving over time and sending you the information. For example, if you have drone that
-  wants to estimate the temperature over a forest, it's nice to just send the position with temperature as well, so we can
-give you a heatmap over the google maps and you would make a better analysis. Also, in case of stable devices but many of them,
-if you can specify the location automatically, it's gonna give you same possibilties</li>
-    <li><strong>value</strong> Value is a numerical data, can be an integer or float. We will store non-numeric values as well, but
-    maybe reportings will be decreased due to type of the value you are sending to us.</li>
-    <li><strong>device</strong> any source of information must have a device id, and this id must be unique among your devices otherwise
-    we cannot differenciate between your multiple devices</li>
+    <li><strong>geo</strong> La ubicación geográfica de su dispositivo. Aceptamos un valor lat / lng para cada solicitud porque
+      En algunos casos, es posible que su dispositivo se mueva con el tiempo y le envíe la información. Por ejemplo, si tiene un dron que
+    quiere estimar la temperatura sobre un bosque, es bueno enviar la posición con la temperatura también, para que podamos
+  darle un mapa de calor sobre los mapas de Google y haría un mejor análisis. Además, en el caso de dispositivos estables, pero muchos de ellos,
+  si puede especificar la ubicación automáticamente, le dará las mismas posibilidades</li>
+    <li><strong>Valor</strong> El valor es un dato numérico, puede ser un número entero o float. Almacenaremos valores no numéricos también, pero
+          tal vez los informes disminuirán debido al tipo del valor que nos está enviando.</li>
+    <li><strong>Dispositivo</strong>
+      cualquier fuente de información debe tener una identificación de dispositivo, y esta identificación debe ser única entre sus dispositivos; de lo contrario, 
+      no podemos diferenciar entre sus múltiples dispositivos</li>
   </ul>
 
   <br>
 
-  Type the value: 
+  Escriba el valor: 
   <input type="text"   (input)="ChangeExample()"
   [(ngModel)]="example.value" placeholder="Numeric value, for example 22.3">
 
-  Type the sourcename:
+  Escriba el nombre de origen:
   <input type="text"   (input)="ChangeExample()"
   [(ngModel)]="example.dataSourceId" placeholder="For example, device-3">
   <rd-inline-api
@@ -38,7 +39,7 @@ if you can specify the location automatically, it's gonna give you same possibil
   <br>
   <div style="border-left: 2px solid black; padding-left: 15px;">
     <h4>YAML</h4>
-    <p>Also you can provide us the yaml version with UDP. Please read UDP documents for more information</p>
+    <p>También puede proporcionarnos la versión yaml con UDP. Lea los documentos UDP para obtener más información</p>
     <pre>{{GetYAML({headers: boardcastHeaderExample, body: boardcastBodyExample})}}</pre>
   </div> 
 </app-page-container>
