--- a/src/app/components/roles/roles.component.html
+++ b/src/app/components/roles/roles.component.html
@@ -2,8 +2,8 @@
   No hay roles. Por favor crea roles y podrás gestionarlos aquí.
 </app-error-message>
 
-<app-page-container maintitle="Roles" subtitle="Manage roles and access levels">
-<a class="btn btn-primary add-button" routerLink="../role/create" action-button translate>create a new role</a>
+<app-page-container maintitle="Roles" subtitle="Administrar roles y niveles de acceso">
+<a class="btn btn-primary add-button" routerLink="../role/create" action-button translate>Crear nuevo rol</a>
 <div ngx-sidebar-off class="table-responsive iot-table">
   <table class="table app-roles-table">
     <thead>
@@ -17,10 +17,10 @@
         <td>{{role.title | translate}}</td>
         <td>
           <a [routerLink]="'/role/' + role.id" [ngClass]="'role-edit-button-' + role.id">
-            <i [Tooltip]="'Edit'" class="icon-mode_edit action-btn"></i>
+            <i [Tooltip]="'Editar'" class="icon-mode_edit action-btn"></i>
           </a>
           <a (click)="DeleteRole(role);" [ngClass]="'role-delete-button-' + role.id">
-            <i [Tooltip]="'Delete'" class="icon-delete action-btn"></i>
+            <i [Tooltip]="'Eliminar'" class="icon-delete action-btn"></i>
           </a>
         </td>
       </tr>
