--- a/src/app/components/widgets/history-statistics/history-statistics.component.html
+++ b/src/app/components/widgets/history-statistics/history-statistics.component.html
@@ -3,7 +3,7 @@
     <div class="d-flex d-md-flex d-sm-block d-xs-block align-items-center">
       <div class="d-2">
         <h2>{{device.name}}</h2>
-        <p>{{'Mostrar por ahora y otros' | translate}}</p>
+        <p>{{'Mostrar Historial por día' | translate}}</p>
       </div>
       <div class="d-2 d-sm-block current-item">
         <div class="d-flex flex-column" *ngIf="dailyHistory.length">
@@ -39,7 +39,7 @@
             <td>
                 {{serie.average}}°
               <span class="unit">
-               Avg
+               Promedio
               </span>
             </td>
           </tr>
