--- a/src/app/ng5-basic/nav-bar/nav-bar.component.html
+++ b/src/app/ng5-basic/nav-bar/nav-bar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-nav" dir="ltr">
     <div class="application-nav col-lg-7">
       <div class="active-application-wrapper">
-        <div class="active-application" title="Work Office In London">
+        <div class="active-application" title="Azure Cloud Santiago de Chile">
           <div class="application-avatar">IOT</div>
           <div class="application-title" translate>Azure Cloud</div>
         </div>
@@ -13,13 +13,13 @@
     </button>
     <div class="navbar-collapse f-basic-auto">
       <div class="d-flex flex-row-reverse ml-auto justify-content-start nav-items">
-        <div class="d-2">
+        <!--<div class="d-2">
           <app-profile-menu></app-profile-menu>
         </div> 
         <div class="d-2">
           <app-notification-list></app-notification-list>
         </div>
-        <!-- <div class="d-2">
+         <div class="d-2">
           <app-applications-list></app-applications-list>
         </div> -->
       </div>
