prueba de dispositivos

--- a/src/app/components/contact-details/contact-details.component.html
+++ b/src/app/components/contact-details/contact-details.component.html
@@ -1,7 +1,7 @@
 <app-progress-line *ngIf="isRequesting"></app-progress-line>
 <app-page-container
-  maintitle="Manage your contact details"
-  subtitle="Manage your emergency contacts so we can reach you in different situations and events">
+  maintitle="Administre sus detalles de contacto"
+  subtitle="Administra tus contactos de emergencia para que podamos contactarte en diferentes situaciones y eventos">
   <form>
     <table class="table app-devices-table">
       <thead>
@@ -26,8 +26,8 @@
       </tbody>
     </table>
   
-    <button (click)="SubmitForm()" type="submit" class="btn btn-primary app-contact-detail-update" >Update the contacts</button>
-    <button (click)="AddAnother()" class="btn btn-secondary app-contact-detail-add" >+ Add another</button>
+    <button (click)="SubmitForm()" type="submit" class="btn btn-primary app-contact-detail-update" >Actualiza los contactos</button>
+    <button (click)="AddAnother()" class="btn btn-secondary app-contact-detail-add" >+ Agrega otro</button>
   </form>
   
 </app-page-container>
