--- a/src/app/components/device-events-actions/device-events-actions.component.html
+++ b/src/app/components/device-events-actions/device-events-actions.component.html
@@ -10,7 +10,7 @@
 
         <select name="" id="" class="form-control" style="width: 60px;">
           <option value="" selected>Si</option>
-          <option value="">Si no</option>
+          <option value="">Si No</option>
         </select>
       </div>
       
@@ -40,5 +40,5 @@
 
   </ng-container>
   <br>
-  <button style="margin-left: 7.5px;" (click)="AddAnother()" class="btn btn-secondary app-event-action-add" >+ Add another</button>
+  <button style="margin-left: 7.5px;" (click)="AddAnother()" class="btn btn-secondary app-event-action-add" >+ Agrega otro</button>
 </app-page-container>
