--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -4,17 +4,17 @@
       <nav class="col-md-6">
           <ul>
               <li >
-                  <a href="www.lawebdelprogramador.cl" target="_blank">
+                  <a href="http://www.lawebdelprogramador.cl/" target="_blank">
                       Home
                   </a>
               </li>
              <li>
-                <a href="www.lawebdelprogramador.cl/precios" target="_blank">
+                <a href="http://www.lawebdelprogramador.cl/contacto.html" target="_blank">
                     Precios
                 </a>
              </li>
              <li>
-                <a href="www.lawebdelprogramador.cl" target="_blank">
+                <a href="http://lawebdelprogramador.cl/bloglawebdelprogramador/" target="_blank">
                     Suscribir
                 </a>
              </li>
