--- a/src/app/components/docs/docs.component.html
+++ b/src/app/components/docs/docs.component.html
@@ -1,59 +1,62 @@
-<app-page-container maintitle="Welcome to realtime documentations" subtitle="In this section, we explain all about the dashboard usage and it's connectivity conditions to server, and how you can interact your hardwares using our REST api to make an interactive dashboard.">
+<app-page-container maintitle="Bienvenido a documentaciones en tiempo real" subtitle="En esta sección, explicamos todo sobre el uso del tablero de instrumentos y sus condiciones de conectividad con el servidor, y cómo puede interactuar con su hardwares utilizando nuestra API REST para crear un panel interactivo.">
   
   <app-if-not-english>
-    <div class="alert alert-warning">Documents are only available in English at this moment</div>
+    <div class="alert alert-warning">Los documentos solo están disponibles en inglés en este momento</div>
   </app-if-not-english>
   
-  <h2>Basics and understanding</h2>
-  <p>Here we are describing some basics about the dashboard and explain some definitions. You can connect your devices
-    to <strong>esam.io</strong> dashboard for realtime monitoring, artificial intelligence, and reporting.
-    We provide scalable and relaible platform for Iot devices which can be used for vast variety of purposes.
+  <h2>Conceptos básicos y comprensión</h2>
+  <p>
+    Aquí describimos algunos conceptos básicos sobre el tablero y explicamos algunas definiciones. Puedes conectar tus dispositivos
+    a <strong>www.lawebdelprogramador.cl</strong>Tablero de instrumentos para monitoreo en tiempo real, inteligencia artificial e informes.
+    Proporcionamos una plataforma escalable y confiable para dispositivos Iot que se puede utilizar para una gran variedad de propósitos.
   </p>
 
-  <h2>Integrating devices and softwares</h2>
-  <p>We are trying to provide couple of methods that gives developers this ability to conenct their devices to dashboard.
-    These methods are consisting:
+  <h2>Integrando dispositivos y software</h2>
+  <p>
+    Integración de dispositivos y software Estamos tratando de proporcionar un par de métodos que brinden a los desarrolladores la capacidad de conectar sus dispositivos al tablero. 
+    Estos métodos son consistentes:
   </p>
   <ul>
-    <li><a routerLink="/docs/restful-api">RESTful api for biodirectional information, such as temperature devices</a></li>
-    <li>UDP api for biodirectional information, such as temperature devices</li>
-    <li>MQTT api, for multidirectional communications, such as sending information and recieving orders</li>
+    <li><a routerLink="/docs/restful-api">API apta para información bidireccional, como dispositivos de temperatura</a></li>
+    <li>API apta REST para información bidireccional, como api UDP del dispositivo de temperatura para información bidireccional, 
+      como dispositivos de temperatura</li>
+    <li>MQTT api, para comunicaciones multi direccionales, como enviar información y recibir órdenes</li>
   </ul>
 
-  <strong>Note: </strong> <i>UDP and MQTT are still in experimental area, so they are not available in production and their
-  api and domain access might change in near future.</i>
+  <strong>Nota: </strong> <i>UDP y MQTT todavía están en el área experimental, por lo que no están disponibles en producción y su
+        api y acceso de dominio pueden cambiar en el futuro cercano.</i>
 
-  
-  <h2>Getting a token</h2>
-  <p>You can find your <a routerLink="/token">Access Token</a> inside your settings section. Make sure you use the <a routerLink="/token">Access Token</a> only to update us for your device information,
-  such as the changes in temperature or humidity, devices usages and etc. There might be other tokens provided to you
-  and each have their own usage.
-  Eversince you have your token, you can make post and get requests to the api server included <strong>x-token</strong> in headers.</p>
+  <h2>Obtener un token</h2>
+  <p>Puedes encontrar tu <a routerLink="/token">Token de acceso</a>dentro de tu sección de configuraciones. Asegúrate de usar el<a routerLink="/token">Token de acceso</a> solo para actualizarnos la información de tu dispositivo,
+  como los cambios en la temperatura o la humedad, los usos de los dispositivos, etc. 
+  Puede haber otros tokens provistos y cada uno tiene su propio uso.
+  Desde que tiene su token, puede hacer publicaciones y obtener solicitudes para el servidor de API incluido <strong>x-token</strong> en headers.</p>
 
   <h2>CloudDevice vs DataSource</h2>
-  <p>We have two definition in dashboard for data and devices which are really simple to understand and straightforward.</p>
+  <p>Tenemos dos definiciones en el tablero para datos y dispositivos que son realmente simples de entender y sencillos.</p>
 
-  <p><b>CloudDevice</b> is a device that you can create in your management dashboard, in your Devices > Create a device. This device
-  represents a phyical device or a part of that, and main purpose is to be used for human interactions, drawing charts and making reports.
-  Each device, has a datasource. This datasource, is a raw data, such as a number for temperature that you send to api
-  from your device. All devices must be connected to a datasource inorder to collect information.
+  <p><b>CloudDevice</b> es un dispositivo que puede crear en su tablero de administración, en sus Dispositivos > Crear un dispositivo. Este dispositivo
+    representa un dispositivo físico o una parte de eso, y el propósito principal es ser utilizado para interacciones humanas, dibujar gráficos y hacer informes.
+    Cada dispositivo, tiene una fuente de datos. Este origen de datos, es un dato en bruto, como un número para la temperatura que envía a api
+    desde tu dispositivo. Todos los dispositivos deben estar conectados a una fuente de datos para ordenar la información.
   </p>
-  <p>When you send your data with a data source id, we collect it, but if there is no device for this API we will show it in
-    devices pages, as unconnected device. We are not subject to hold these information for long, if there is no device assigned.
-    So it's necessary to create device based on device as quick as possible.
+  <p>Cuando envía sus datos con una identificación de fuente de datos, los recopilamos, pero si no hay ningún dispositivo para esta API, lo mostraremos en
+    páginas de dispositivos, como dispositivo desconectado. No estamos sujetos a mantener esta información por mucho tiempo, si no hay un dispositivo asignado.
+    Por lo tanto, es necesario crear un dispositivo basado en el dispositivo lo más rápido posible.
 
   </p>
-  <p>You can connect a datasource to many devices only for biodirectional devices. We don't know why you might use this,
-    but it's available in case of any usages.
+  <p>
+      Puede conectar una fuente de datos a muchos dispositivos solo para dispositivos bidireccionales. No sabemos por qué podría usar esto, 
+      pero está disponible en caso de cualquier uso.
   </p>
   <br>
   <h2>Next steps:</h2>
   <ul>
     <li>
-      <a routerLink="/docs/restful-api">Understanding REST api basics</a>
+      <a routerLink="/docs/restful-api">Comprender REST api basics</a>
     </li>
     <li>
-      <a routerLink="/docs/sending-information-over-https">Sending information from sensor devices using REST api</a>
+      <a routerLink="/docs/sending-information-over-https">Enviando información de los dispositivos de sensores usando la api REST</a>
     </li>
   </ul>
 </app-page-container>
