pruebas de cambios en angular rx

--- a/src/app/components/device-general-information/device-general-information.component.html
+++ b/src/app/components/device-general-information/device-general-information.component.html
@@ -24,7 +24,7 @@
                     <option value="0" translate>Sensor de temperatura</option>
                     <option value="1" translate>Lampara de un solo puente</option>
                     <option value="2" translate>Sensor de humedad</option>
-                    <option value="3" translate>Sensor de CO2</option>
+                    <option value="3" translate>Sensor de CO2 Calefón</option>
                 </select>
                 <i></i>
             </label>
