--- a/src/app/ng5-basic/nav-bar/nav-bar.component.html
+++ b/src/app/ng5-basic/nav-bar/nav-bar.component.html
@@ -13,13 +13,13 @@
     </button>
     <div class="navbar-collapse f-basic-auto">
       <div class="d-flex flex-row-reverse ml-auto justify-content-start nav-items">
-        <!--<div class="d-2">
-          <app-profile-menu></app-profile-menu>
+        <div class="d-2">
+          <app-profile-menu>Jaime Hernández</app-profile-menu>
         </div> 
         <div class="d-2">
           <app-notification-list></app-notification-list>
         </div>
-         <div class="d-2">
+         <!--<div class="d-2">
           <app-applications-list></app-applications-list>
         </div> -->
       </div>
