--- a/src/app/components/statistics/statistics.component.html
+++ b/src/app/components/statistics/statistics.component.html
@@ -4,7 +4,7 @@
       <div class="d-flex flex-wrap justify-content-between align-items-center">
         <div class="d-2">
           <h2>{{statistic.title | translate}}</h2>
-          <p>{{'Número de la' | translate}} {{statistic.title | translate}}</p>
+          <p>{{'Número de' | translate}} {{statistic.title | translate}}</p>
         </div>
         <div class="d-2 app-statistics-value">
           {{statistic.value}}
