--- a/src/app/components/widgets/lamp-card/lamp-card.component.html
+++ b/src/app/components/widgets/lamp-card/lamp-card.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="box-title">
       <h2 [title]="device.name">{{device.name}}</h2>
-      <p [title]="data.subTitle">Lámpara sencilla simple</p>
+      <p [title]="data.subTitle">Lámpara de la habitación de Carolina</p>
     </div>
   </div>
   <div class="d-flex widget-value">
